Fix text alignment

--- a/index.css
+++ b/index.css
@@ -293,7 +293,7 @@
   left: 0; }
 
 .styles-module_range-boxes__ib1Nb .styles-module_event-content__3sakH {
-  padding: 8px 10px;
+  padding: 0 10px;
   font-weight: bold;
   font-size: 13px;
   width: 100%;
