--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -371,7 +371,7 @@
 
 .range-boxes {
   .event-content {
-    padding: 8px 10px;
+    padding: 0 10px;
     font-weight: bold;
 
     font-size: 13px;
